--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,134 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#root, html, body {
+    height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    margin: 0;
+    background-color: #151515;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+.appTitle {
+    justify-content: center;
+    display: flex;
+    align-items: flex-start;
+    color: #e3e3e3;
+    line-height: 1.4;
+    font-size: 1.3em;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+}
+
+.cards {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.card {
+    background: linear-gradient(90deg, rgb(30, 77, 248) 0%, rgba(112,112,250,1) 100%);
+    width: 24em;
+    border-radius: 0.6em;
+    margin: 1em;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+    transition: all ease 200ms;
+}
+
+.card2 {
+    background: linear-gradient(90deg, rgb(248, 106, 30) 0%, rgb(250, 151, 112) 100%);
+    width: 24em;
+    border-radius: 0.6em;
+    margin: 1em;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+    transition: all ease 200ms;
+}
+
+.card3 {
+    background: linear-gradient(90deg, rgb(172, 30, 248) 0%, rgb(202, 112, 250) 100%);
+    width: 24em;
+    border-radius: 0.6em;
+    margin: 1em;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+    transition: all ease 200ms;
+}
+
+.card:hover {
+    transform: scale(1.03);
+    box-shadow: #101010;
+}
+
+.card2:hover {
+    transform: scale(1.03);
+    box-shadow: #101010;
+}
+
+.card3:hover {
+    transform: scale(1.03);
+    box-shadow: #101010;
+}
+
+.card h2 {
+    color: #e3e3e3;
+    align-content: center;
+    alignment: center;
+    margin-top: -0.2em;
+    line-height: 1.4;
+    font-size: 1.3em;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+}
+
+.card p {
+    color: #777;
+}
+
+.card2 h2 {
+    color: #e3e3e3;
+    align-content: center;
+    alignment: center;
+    margin-top: -0.2em;
+    line-height: 1.4;
+    font-size: 1.3em;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+}
+
+.card2 p {
+    color: #777;
+}
+
+.card3 h2 {
+    color: #e3e3e3;
+    align-content: center;
+    alignment: center;
+    margin-top: -0.2em;
+    line-height: 1.4;
+    font-size: 1.3em;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+}
+
+.card3 p {
+    color: #777;
+}
+
+.card-body {
+    padding: 1.2em;
 }
