--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,6 @@ html {
 }
 
 .cardBook {
-
     margin-top: 0.2em;
 }
 
@@ -160,10 +159,16 @@ html {
     height: 1.5rem;
     border: none;
     color: #e3e3e3;
+    border-radius: 0.6em;
 }
 
 .cardMain .card-body {
     padding: 0;
+}
+
+.cardMain:hover {
+    transform: scale(1.03);
+    box-shadow: #101010;
 }
 
 /* Modal*/
@@ -199,10 +204,11 @@ html {
     height: 3rem;
     color: #e3e3e3;
 }
+
 .main-card {
     align-items: center;
     justify-content: center;
-    margin: 1em;
+    margin-left: 5%;
     overflow: hidden;
 }
 
@@ -216,7 +222,7 @@ html {
     justify-content: center;
     width: 50%;
     height: 2.2rem;
-    border-radius: 1.6em;
+    border-radius: 0.6em;
     border: none;
 }
 
@@ -224,10 +230,15 @@ html {
     background: linear-gradient(90deg, rgb(30, 77, 248) 0%, rgba(112,112,250,1) 100%);
     height: 2.2rem;
     border: none;
-    border-radius: 1.6em;
+    border-radius: 0.6em;
     color: #e3e3e3;
     width: 100px;
     margin-left: 20px;
+}
+
+.btnSearch:hover {
+    transform: scale(1.03);
+    box-shadow: #101010;
 }
 
 .filterResults {
@@ -256,7 +267,17 @@ html {
     justify-content: center;
     width: 10%;
     height: 2rem;
-    border-radius: 1.6em;
+    border-radius: 0.6em;
+    border: none;
+}
+
+.indexSearch {
+    margin-left: 5px;
+    align-items: center;
+    justify-content: center;
+    width: 10%;
+    height: 2rem;
+    border-radius: 0.6em;
     border: none;
 }
 
