--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,10 @@
 }
 
 body {
+    overflow-x: hidden;
     margin: 0;
     background-color: #151515;
 }
-
 
 html {
     scroll-behavior: smooth;
@@ -165,6 +165,7 @@ html {
 .cardMain {
     padding: 8px;
     background: #212121;
+    border-radius: 0.6em;
 }
 
 .cardMain .card-body {
@@ -197,14 +198,48 @@ html {
 }
 
 .modal-header {
+    background-color: #282828;
     font-size: 1.4rem;
+    height: 30px;
+    padding-left: 5px;
+    margin-bottom: 8px;
+}
+
+.modal-title {
+    padding-top: 5px;
+    overflow: hidden;
+    color: #e3e3e3;
+    letter-spacing: 1px;
+    font-weight: 500;
+    font-size: 16px;
+    white-space: nowrap;
+}
+
+.left-silde {
+    float: right;
+}
+
+.right-side {
+    margin-right: 10px;
+    float: right;
 }
 
 .btnLink {
-    background: linear-gradient(90deg, rgb(248, 55, 30) 0%, rgb(250, 140, 112) 100%);
     border: none;
-    color: #e3e3e3;
+    color: #1e3cdd;
     text-decoration: none;
+}
+
+.close {
+    float: right;
+    background: linear-gradient(90deg, rgb(30, 77, 248) 0%, rgba(112,112,250,1) 100%);
+    border: none;
+    padding: 5px;
+    color: #e3e3e3;
+}
+
+.close:hover {
+    background: linear-gradient(90deg, rgb(248, 30, 74) 0%, rgb(250, 112, 124) 100%);
 }
 
 /*Search Bar*/
@@ -232,6 +267,7 @@ html {
 }
 
 .searchBar {
+    padding-left: 15px;
     align-items: center;
     justify-content: center;
     width: 50%;
@@ -277,6 +313,7 @@ html {
 }
 
 .maxSearch {
+    padding-left: 10px;
     align-items: center;
     justify-content: center;
     width: 10%;
@@ -286,6 +323,7 @@ html {
 }
 
 .indexSearch {
+    padding-left: 10px;
     margin-left: 5px;
     align-items: center;
     justify-content: center;
@@ -300,10 +338,26 @@ html {
 }
 
 .listItems {
+    height: 100%;
     display: flex;
-    align-items: center;
+    margin: 1em;
     justify-content: space-between;
-    margin: 2rem;
+}
+
+.filter {
+    display: none;
+}
+
+.filter:after {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.4);
+    content: '';
+    height: 100%;
+    left: 0;
+    top: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
 }
 
 /*Footer*/
