--- a/src/index.css
+++ b/src/index.css
@@ -137,11 +137,61 @@ html {
 }
 
 .card3 p {
-    color: #777;
+    color: #eaeaea;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.card4 {
+    margin-right: 65px;
+    float: right;
+    background: linear-gradient(90deg, rgb(26, 214, 51) 0%, rgb(102, 215, 94) 100%);
+    width: 24em;
+    border-radius: 0.6em;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+    transition: all ease 200ms;
+}
+
+.card4:hover {
+    transform: scale(1.03);
+    box-shadow: #101010;
+}
+
+.card4 h2 {
+    color: #e3e3e3;
+    align-content: center;
+    alignment: center;
+    margin-top: -0.2em;
+    line-height: 1.4;
+    font-size: 1.3em;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+}
+
+.card4 p {
+    color: #eaeaea;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .card-body {
     padding: 1.2em;
+}
+
+.referenceBtn {
+    background-color: transparent;
+    border: none;
+    color: #e3e3e3;
+    font-weight: bold;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    height: 25px;
+}
+
+.referenceBtn:hover {
+    text-decoration: #1e3cdd;
+    color: #0a1c83;
 }
 
 /* Book Card */
