--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    overflow-x: hidden;
+    overflow-x: scroll;
     margin: 0;
     background-color: #151515;
 }
@@ -144,7 +144,7 @@ html {
 .card4 {
     margin-right: 65px;
     float: right;
-    background: linear-gradient(90deg, rgb(26, 214, 51) 0%, rgb(102, 215, 94) 100%);
+    background: linear-gradient(90deg, rgb(36, 124, 41) 0%, rgb(102, 215, 94) 100%);
     width: 24em;
     border-radius: 0.6em;
     overflow: hidden;
@@ -333,17 +333,18 @@ html {
 
 .btnSearch {
     background: linear-gradient(90deg, rgb(30, 77, 248) 0%, rgba(112,112,250,1) 100%);
-    height: 2.2rem;
+    height: 38px;
     border: none;
     border-radius: 0.6em;
     color: #e3e3e3;
-    width: 100px;
-    margin-left: 20px;
+    width: 125px;
+    margin-left: 15px;
 }
 
 .btnSearch:hover {
     transform: scale(1.03);
     box-shadow: #101010;
+    background: linear-gradient(90deg, rgb(76, 76, 76) 0%, rgb(172, 172, 172) 100%);
 }
 
 .filterResults {
@@ -382,14 +383,15 @@ html {
     margin-left: 5px;
     align-items: center;
     justify-content: center;
-    width: 10%;
     height: 2rem;
     border-radius: 0.6em;
     border: none;
 }
 
 .indexResults {
-    margin-top: 0.8rem;
+    margin-top: -35px;
+    float: left;
+    margin-left: 250px;
 }
 
 .listItems {
